# serde_wat

./: .gitignore  Cargo.toml  README.md  build.rs  header.txt  search-index.js
serde_wat/: index.html  macro.wat!.html  macro.wat.html  sidebar-items.js
src/: lib.rs
src/serde_wat/src/: lib.rs.html
tests/: macros.rs
